--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= wjstnals97@gmail.com
+spring.mail.password= dlQmsdkdl97!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
