--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>4.4.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
