--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.generate-ddl=true
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
